# wikitor

./: .gitignore  LICENSE  README.md  conversa.md
backend/app/: main.py
backend/app/application/: authoring_service.py  chat_history_service.py  document_service.py  index_service.py  llm_settings_service.py  qa_service.py
backend/app/domain/: entities.py
backend/app/presentation/: api.py  (+1 more)
backend/tests/: test_affinity.py  test_chat_history.py  test_commit.py  test_llm_providers.py  test_llm_settings_api.py  test_remocao.py  test_settings_repository.py  test_storage.py
content/chats/: 1b99ecaa-d6f4-4904-b11a-c1a3aaf4ec98.md  ff9e3784-2ed9-4855-bebe-c259ead93830.md
content/indices/: modelo-osi.json  redes.json  seguranca-digital.json  seguranca.json  servidor-dns.json  wikitor.json
docs/: README.md
docs/design/: edicao-assistida-fluxo.md  editor-wysiwyg.md  implementation-plan.md  multi-provedor-llm.md  wikitor-design.md
poc/: README.md
poc/backend/: Makefile  pyproject.toml
poc/backend/app/: ai.py  config.py  frontmatter.py  indexer.py  llm.py  main.py  models.py  storage.py
poc/backend/skills/: content-authoring.md
poc/backend/tests/: test_affinity.py  test_commit.py  test_remocao.py  test_storage.py
poc/web/: app.js  index.html  style.css
poc/webapp/: README.md  tsconfig.tsbuildinfo
webapp/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
webapp/e2e/: smoke.spec.ts
webapp/src/: App.tsx  api.ts  index.css  markdown.ts  types.ts
(+53 files in other folders)
